--- a/vol3/vol3-csharp-examples/AIFH-Vol3/AIFH-Vol3.csproj
+++ b/vol3/vol3-csharp-examples/AIFH-Vol3/AIFH-Vol3.csproj
@@ -48,12 +48,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExampleHolder.cs" />
+    <Compile Include="Examples\ANN\LearnIrisAnneal.cs" />
+    <Compile Include="Examples\Classic\Boltzmann\TSP\BoltzTSP.cs" />
+    <Compile Include="Examples\Classic\HopfieldAssociate\HopfieldAssociateHebbian.cs" />
+    <Compile Include="Examples\Classic\HopfieldAssociate\HopfieldAssociateStorkey.cs" />
     <Compile Include="Examples\Classic\Logic\InputNeuron.cs" />
     <Compile Include="Examples\Classic\Logic\Connection.cs" />
     <Compile Include="Examples\Classic\Logic\INeuron.cs" />
     <Compile Include="Examples\Classic\Logic\LogicExample.cs" />
     <Compile Include="Examples\Classic\Logic\RegularNeuron.cs" />
     <Compile Include="Examples\Intro\CSVExample.cs" />
+    <Compile Include="Examples\SimpleLearn.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -61,6 +66,12 @@
     <None Include="App.config" />
     <None Include="packages.config" />
     <EmbeddedResource Include="Resources\iris.csv" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AIFH-Vol3-Core\AIFH-Vol3-Core.csproj">
+      <Project>{9b3c2f4c-8916-416e-a5ee-aeab67721b9a}</Project>
+      <Name>AIFH-Vol3-Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
