--- a/vol3/vol3-csharp-examples/AIFH-Vol3-Core/packages.config
+++ b/vol3/vol3-csharp-examples/AIFH-Vol3-Core/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CsvHelper" version="2.13.2.0" targetFramework="net452" />
+  <package id="MathNet.Numerics" version="3.8.0" targetFramework="net452" />
 </packages>
