--- a/vol3/vol3-java-examples/build.gradle
+++ b/vol3/vol3-java-examples/build.gradle
@@ -124,3 +124,9 @@ task(runDBNExample, group: 'examples', description: 'Chapter 9.  Simple dbnn bel
     classpath = sourceSets.main.runtimeClasspath
 }
 
+task(runDigitsDropoutExample, group: 'examples', description: 'Chapter 12.  Dropout network for MNIST digits.',
+        dependsOn: 'classes', type: JavaExec) {
+    main = 'com.heatonresearch.aifh.examples.ann.LearnDigitsDropout'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
