--- a/vol3/vol3-csharp-examples/AIFH-Vol3-Core/AIFH-Vol3-Core.csproj
+++ b/vol3/vol3-csharp-examples/AIFH-Vol3-Core/AIFH-Vol3-Core.csproj
@@ -58,16 +58,24 @@
     <Compile Include="Core\ANN\Activation\ActivationSigmoid.cs" />
     <Compile Include="Core\ANN\Activation\ActivationSoftMax.cs" />
     <Compile Include="Core\ANN\Activation\IActivationFunction.cs" />
+    <Compile Include="Core\ANN\BasicLayer.cs" />
     <Compile Include="Core\ANN\BasicNetwork.cs" />
+    <Compile Include="Core\ANN\Conv2DLayer.cs" />
+    <Compile Include="Core\ANN\DropoutLayer.cs" />
     <Compile Include="Core\ANN\ILayer.cs" />
+    <Compile Include="Core\ANN\MaxPoolLayer.cs" />
     <Compile Include="Core\ANN\Randomize\AbstractRandomizeNetwork.cs" />
     <Compile Include="Core\ANN\Randomize\IRandomizeNetwork.cs" />
     <Compile Include="Core\ANN\Randomize\RangeRandomizeNetwork.cs" />
     <Compile Include="Core\ANN\Randomize\XaiverRandomizeNetwork.cs" />
     <Compile Include="Core\ANN\TempStructureCounts.cs" />
+    <Compile Include="Core\ANN\Train\BackPropagation.cs" />
+    <Compile Include="Core\ANN\Train\Error\CrossEntropyErrorFunction.cs" />
     <Compile Include="Core\ANN\Train\Error\IErrorFunction.cs" />
+    <Compile Include="Core\ANN\Train\Error\OutputErrorFunction.cs" />
     <Compile Include="Core\ANN\Train\GradientCalc.cs" />
     <Compile Include="Core\ANN\Train\IGradientCalcOwner.cs" />
+    <Compile Include="Core\ANN\Train\ResilientPropagation.cs" />
     <Compile Include="Core\ANN\WeightedLayer.cs" />
     <Compile Include="Core\DBNN\DeepBeliefNetwork.cs" />
     <Compile Include="Core\DBNN\DeepLayer.cs" />
