--- a/vol3/vol3-csharp-examples/AIFH-Vol3-Core/AIFH-Vol3-Core.csproj
+++ b/vol3/vol3-csharp-examples/AIFH-Vol3-Core/AIFH-Vol3-Core.csproj
@@ -99,6 +99,8 @@
     <Compile Include="Core\Error\ErrorCalculationSSE.cs" />
     <Compile Include="Core\Error\IErrorCalculation.cs" />
     <Compile Include="Core\General\Data\BasicData.cs" />
+    <Compile Include="Core\General\Data\DataUtil.cs" />
+    <Compile Include="Core\General\Data\ErrorCalculation.cs" />
     <Compile Include="Core\General\Fns\AbstractRBF.cs" />
     <Compile Include="Core\General\Fns\GaussianFunction.cs" />
     <Compile Include="Core\General\Fns\IFn.cs" />
@@ -131,6 +133,12 @@
     <Compile Include="Core\Randomize\MultiplyWithCarryGenerateRandom.cs" />
     <Compile Include="Core\Randomize\RandomChoice.cs" />
     <Compile Include="Core\Randomize\SecureGenerateRandom.cs" />
+    <Compile Include="Core\Selection\CategorySearchAxis.cs" />
+    <Compile Include="Core\Selection\GridModelSelection.cs" />
+    <Compile Include="Core\Selection\ISearchAxis.cs" />
+    <Compile Include="Core\Selection\ModelSelection.cs" />
+    <Compile Include="Core\Selection\NumericSearchAxis.cs" />
+    <Compile Include="Core\Selection\RandomModelSelection.cs" />
     <Compile Include="Core\SOM\BestMatchingUnit.cs" />
     <Compile Include="Core\SOM\Neighborhood\INeighborhoodFunction.cs" />
     <Compile Include="Core\SOM\Neighborhood\NeighborhoodBubble.cs" />
@@ -140,6 +148,8 @@
     <Compile Include="Core\SOM\SelfOrganizingMap.cs" />
     <Compile Include="Core\SOM\Train\BasicTrainSOM.cs" />
     <Compile Include="Core\Util\ArrayUtil.cs" />
+    <Compile Include="Core\Util\FileUtil.cs" />
+    <Compile Include="Core\Util\MNISTReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
