--- a/vol3/vol3-dl4j-examples/build.gradle
+++ b/vol3/vol3-dl4j-examples/build.gradle
@@ -12,8 +12,6 @@ dependencies {
     testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'junit:junit:4.10'
     compile 'net.sf.opencsv:opencsv:2.3'
-    compile 'gov.nist.math:jama:1.0.3'
-    compile 'org.lwjgl.lwjgl:lwjgl:2.9.1'
     compile 'jfree:jfreechart:1.0.12'
 	compile 'org.deeplearning4j:deeplearning4j-core:0.4-rc3.8' 
 	compile 'org.nd4j:nd4j-x86:0.4-rc3.8'
@@ -24,9 +22,15 @@ task wrapper(type: Wrapper) {
     gradleVersion = '2.2'
 }
 
-task(runLearnXORBackprop, group: 'examples', description: 'Fit a neural network to the XOR function.',
+task(runLearnXORBackprop, group: 'examples', description: 'Chapter 6. Fit a neural network to the XOR function.',
         dependsOn: 'classes', type: JavaExec) {
     main = 'com.heatonresearch.aifh.examples.ann.LearnXORBackprop'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+task(runIrisBackpropExample, group: 'examples', description: 'Chapter 6.  Iris classification using Backpropagation.',
+        dependsOn: 'classes', type: JavaExec) {
+    main = 'com.heatonresearch.aifh.examples.ann.LearnIrisBackprop'
     classpath = sourceSets.main.runtimeClasspath
 }
 
