--- a/vol3/vol3-dl4j-examples/build.gradle
+++ b/vol3/vol3-dl4j-examples/build.gradle
@@ -22,15 +22,38 @@ task wrapper(type: Wrapper) {
     gradleVersion = '2.2'
 }
 
-task(runLearnXORBackprop, group: 'examples', description: 'Chapter 6. Fit a neural network to the XOR function.',
+task(runXORBackpropExample, group: 'examples', description: 'Chapter 6.  XOR using Backpropagation. (DL4J)',
         dependsOn: 'classes', type: JavaExec) {
     main = 'com.heatonresearch.aifh.examples.ann.LearnXORBackprop'
     classpath = sourceSets.main.runtimeClasspath
 }
 
-task(runIrisBackpropExample, group: 'examples', description: 'Chapter 6.  Iris classification using Backpropagation.',
+task(runIrisBackpropExample, group: 'examples', description: 'Chapter 6.  Iris classification using Backpropagation. (DL4J)',
         dependsOn: 'classes', type: JavaExec) {
     main = 'com.heatonresearch.aifh.examples.ann.LearnIrisBackprop'
     classpath = sourceSets.main.runtimeClasspath
 }
 
+task(runAutoMPGBackpropExample, group: 'examples', description: 'Chapter 6.  MPG automobile regression using Backpropagation.',
+        dependsOn: 'classes', type: JavaExec) {
+    main = 'com.heatonresearch.aifh.examples.ann.LearnAutoMPGBackprop'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+task(runDigitsBackpropExample, group: 'examples', description: 'Chapter 6.  MNIST Digit classification using Backpropagation.',
+        dependsOn: 'classes', type: JavaExec) {
+    main = 'com.heatonresearch.aifh.examples.ann.LearnDigitsBackprop'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+task(runDigitsConvExample, group: 'examples', description: 'Chapter 10.  Convolution network for MNIST digits.',
+        dependsOn: 'classes', type: JavaExec) {
+    main = 'com.heatonresearch.aifh.examples.ann.LearnDigitsConv'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+task(runDigitsDropoutExample, group: 'examples', description: 'Chapter 12.  Dropout network for MNIST digits.',
+        dependsOn: 'classes', type: JavaExec) {
+    main = 'com.heatonresearch.aifh.examples.ann.LearnDigitsDropout'
+    classpath = sourceSets.main.runtimeClasspath
+}
